--- a/front/index.html
+++ b/front/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css" />
+
     <title>Login</title>
   </head>
   <body>
+    <img id="background" src="images/wallpapers-hogwarts-legacy.jpg" />
     <div class="container">
       <div class="box form-box">
         <header>Identification</header>
@@ -37,6 +39,7 @@
         </form>
       </div>
     </div>
+
     <script src="script.js"></script>
   </body>
 </html>
