--- a/front/profil.html
+++ b/front/profil.html
@@ -8,31 +8,17 @@
   </head>
   <body>
     <div class="container">
-      <h1>User Profile</h1>
+      <h1>Profile</h1>
       <div class="profile">
         <img src="https://via.placeholder.com/150" alt="Profile Picture" />
         <div>
-          <h2>John Doe</h2>
-          <p>Software Engineer</p>
+          <h2 id="nom">Nom</h2>
         </div>
       </div>
       <div class="info">
-        <h3>Contact Information</h3>
-        <p>Email: john.doe@example.com</p>
-        <p>Phone: +1234567890</p>
+        <h3>Informations</h3>
+        <p>Email: <span id="email">john.doe@example.com</span></p>
+        <p>Cartes: <span id="cartes">+...</span></p>
       </div>
-      <div class="info">
-        <h3>Address</h3>
-        <p>123 Main Street, City, Country</p>
-      </div>
-      <div class="info">
-        <h3>About Me</h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
-          posuere est sed mi congue, sit amet malesuada purus eleifend.
-          Suspendisse id magna nec nunc aliquet mattis et nec quam.
-        </p>
-      </div>
-    </div>
   </body>
 </html>
