--- a/front/profil.html
+++ b/front/profil.html
@@ -17,8 +17,10 @@
       </div>
       <div class="info">
         <h3>Informations</h3>
-        <p>Email: <span id="email">john.doe@example.com</span></p>
+        <p>Email: <span id="email" class="single"></span></p>
         <p>Cartes: <span id="cartes">+...</span></p>
       </div>
+      <script src="js/profileData.js"></script>
+    </div>
   </body>
 </html>
