--- a/front/profil.html
+++ b/front/profil.html
@@ -18,7 +18,7 @@
       <div class="info">
         <h3>Informations</h3>
         <p>Email: <span id="email" class="single"></span></p>
-        <p>Cartes: <span id="cartes">+...</span></p>
+        <p>Cartes: <span id="cartes"></span></p>
       </div>
       <script src="js/profileData.js"></script>
     </div>
