--- a/front/accueil.html
+++ b/front/accueil.html
@@ -18,7 +18,7 @@
         />
         <ul>
           <li><a href="profil.html">Profil</a></li>
-          <li><a href="index.html">Cartes</a></li>
+          <li><a href="cards.html">Cartes</a></li>
           <li><a href="#">Favoris</a></li>
           <li><a href="booster.html">Booster</a></li>
         </ul>
@@ -26,8 +26,8 @@
       <div class="texte"><h1>HOGWARTS SWAP</h1></div>
 
       <div class="buttonclass">
-        <button type="button">COMMENCER</button>
-        <button type="button">VOIR LES CARTES</button>
+        <a href="booster.html"><button type="button">COMMENCER</button></a>
+        <a href="cards.html"><button type="button">VOIR LES CARTES</button></a>
       </div>
     </div>
     <script src="js/connectedToProfile.js"></script>
