--- a/front/profil.html
+++ b/front/profil.html
@@ -7,10 +7,20 @@
     <link rel="stylesheet" href="css/profil.css" />
   </head>
   <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="accueil.html">Accueil</a></li>
+          <li><a href="profil.html">Profil</a></li>
+          <li><a href="booster.html">Booster</a></li>
+        </ul>
+      </nav>
+    </header>
+
     <div class="container">
-      <h1>Profile</h1>
-      <div class="profile">
-        <img src="https://via.placeholder.com/150" alt="Profile Picture" />
+      <h1>Profil d'utilisateur</h1>
+      <div class="profil">
+        <img src="images/hppdp.jpg" alt="Profile Picture" />
         <div>
           <h2 id="nom">Nom</h2>
         </div>
@@ -22,5 +32,9 @@
       </div>
       <script src="js/profileData.js"></script>
     </div>
+
+    <footer>
+      <p>&copy; 2024 Stess. Tous droits réservés.</p>
+    </footer>
   </body>
 </html>
