--- a/front/createAccount.html
+++ b/front/createAccount.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <div class="container">
+      <header>Inscription</header>
       <div class="box form-box">
-        <header>Inscription</header>
-        <form action="" method="post">
+        <form id="registerForm" action="" method="post">
           <div class="field input">
             <label for="username">Pseudo</label>
             <input
@@ -18,6 +18,7 @@
               name="username"
               id="username"
               autocomplete="on"
+              placeholder="Entrez votre pseudo"
               required
             />
           </div>
@@ -28,6 +29,7 @@
               name="email"
               id="email"
               autocomplete="on"
+              placeholder="Entrez votre email"
               required
             />
           </div>
@@ -38,17 +40,12 @@
               name="password"
               id="password"
               autocomplete="on"
+              placeholder="Entrez votre mot de passe"
               required
             />
           </div>
           <div class="field">
-            <input
-              type="submit"
-              class="btn"
-              name="submit"
-              value="Inscrire"
-              required
-            />
+            <input type="submit" class="btn" name="submit" value="S'inscrire" />
           </div>
           <div class="links">
             Déjà inscrit? <a href="index.html">Identifiez vous</a>
