--- a/front/createAccount.html
+++ b/front/createAccount.html
@@ -10,7 +10,7 @@
     <div class="container">
       <header>Inscription</header>
       <div class="box form-box">
-        <form id="registerForm" action="" method="post">
+        <form id="registerForm">
           <div class="field input">
             <label for="username">Pseudo</label>
             <input
@@ -45,10 +45,10 @@
             />
           </div>
           <div class="field">
-            <input type="submit" class="btn" name="submit" value="S'inscrire" />
+            <button type="submit" class="btn">S'inscrire</button>
           </div>
           <div class="links">
-            Déjà inscrit? <a href="index.html">Identifiez vous</a>
+            Déjà inscrit? <a href="index.html">Identifiez-vous</a>
           </div>
         </form>
       </div>
