--- a/front/accueil.html
+++ b/front/accueil.html
@@ -19,7 +19,7 @@
         <ul>
           <li><a href="profil.html">Profil</a></li>
           <li><a href="cards.html">Cartes</a></li>
-          <li><a href="#">Favoris</a></li>
+          <li><a href="favoris.html">Favoris</a></li>
           <li><a href="booster.html">Booster</a></li>
         </ul>
       </div>
