--- a/front/cards.html
+++ b/front/cards.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
     <link rel="stylesheet" href="css/cards.css" />
     <title>Collection de cartes</title>
   </head>
@@ -34,7 +38,6 @@
       </div>
     </header>
 
-    
     <div id="cards-container" class="container"></div>
     <script src="js/cards.js"></script>
   </body>
