--- a/front/profil.html
+++ b/front/profil.html
@@ -8,15 +8,17 @@
   </head>
   <body>
     <header>
-      <nav>
+      <div class="menu">
         <ul>
           <li><a href="accueil.html">Accueil</a></li>
           <li><a href="profil.html">Profil</a></li>
           <li><a href="booster.html">Booster</a></li>
         </ul>
-      </nav>
+      </div>
     </header>
-
+    <div class="backgroundImg">
+      <img src="images/boosterimage.jpg" />
+    </div>
     <div class="container">
       <h1>Profil d'utilisateur</h1>
       <div class="profil">
