--- a/front/profil.html
+++ b/front/profil.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>User Profile</title>
     <link rel="stylesheet" href="css/profil.css" />
+    <link rel="stylesheet" href="css/modal.css" />
   </head>
   <body>
     <header>
@@ -31,12 +32,31 @@
         <h3>Informations</h3>
         <p>Email: <span id="email" class="single"></span></p>
         <p>Cartes: <span id="cartes"></span></p>
+        <button id="openModalButton">Échanger des Cartes</button>
       </div>
-      <script src="js/profileData.js"></script>
+    </div>
+
+    <div id="exchangeModal" class="modal">
+      <div class="modal-content">
+        <span class="close-button">&times;</span>
+        <h2>Échange de Cartes</h2>
+        <form id="exchangeForm">
+          <label for="yourCards">Vos Cartes:</label>
+          <select id="yourCards" multiple></select>
+          <label for="theirUsername">Nom d'utilisateur du destinataire:</label>
+          <input type="text" id="theirUsername" required />
+          <label for="theirCards">Cartes à échanger:</label>
+          <select id="theirCards" multiple></select>
+          <button type="submit">Échanger</button>
+        </form>
+      </div>
     </div>
 
     <footer>
       <p>&copy; 2024 Stess. Tous droits réservés.</p>
     </footer>
+
+    <script src="js/profileData.js"></script>
+    <script src="js/modal.js"></script>
   </body>
 </html>
